<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2489 Scouter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="beginScouting">Begin Scouting!</string>
    <string name="title_activity_mlist_view">MListView</string>
    <string name="title_activity_nlist_view">NListView</string>
    <string name="title_activity_team_list_view">TeamListView</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_input_data">InputDataActivity</string>
    <string name="title_activity_match_listing">MatchListing</string>
    <string name="title_activity_list_fragment">ListFragment</string>
    <string name="title_activity_omatches_frag">OMatchesFrag</string>
    <string name="title_activity_amatches_frag">AMatchesFrag</string>
    <string name="assists">Assists</string>
    <string name="highauto">High (Auto)</string>
    <string name="highteleop">High (TeleOp)</string>
    <string name="lowauto">Low (Auto)</string>
    <string name="lowteleop">Low (TeleOp)</string>
    <string name="catches">Catches</string>
	<string name="mobile">Mobile</string>
    <string name="trusses">Truss</string>
    <string name="done">DONE</string>
    <string name="notmobile">Not Mobile</string>
    <string name="about">About</string>
    
</resources>
