<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputData"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InputDataActivity" >

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:onClick="assistMinus"
        android:text="-" />

    <TextView
        android:id="@+id/assistsBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:text="10"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/assistsBox"
        android:layout_alignBottom="@+id/assistsBox"
        android:layout_toRightOf="@+id/assistsBox"
        android:onClick="assistPlus"
        android:text="+" />

    <Button
        android:id="@+id/Button01"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/button2"
        android:onClick="highAutoMinus"
        android:text="-" />

    <TextView
        android:id="@+id/highAutoBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button01"
        android:layout_alignBottom="@+id/Button01"
        android:layout_toRightOf="@+id/Button01"
        android:text="10"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/Button01"
        android:layout_marginLeft="16dp"
        android:text="@string/highauto"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/Button02"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/highAutoBox"
        android:layout_alignBottom="@+id/highAutoBox"
        android:layout_toRightOf="@+id/highAutoBox"
        android:onClick="highAutoPlus"
        android:text="+" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_marginTop="15dp"
        android:text="@string/highteleop"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/Button03"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/textView4"
        android:onClick="highTeleMinus"
        android:text="-" />

    <TextView
        android:id="@+id/highTeleOpBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button03"
        android:layout_alignBottom="@+id/Button03"
        android:layout_toLeftOf="@+id/button2"
        android:text="10"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/Button04"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/highTeleOpBox"
        android:layout_alignBottom="@+id/highTeleOpBox"
        android:layout_toLeftOf="@+id/Button01"
        android:onClick="highTelePlus"
        android:text="+" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button04"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/lowauto"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/Button05"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button04"
        android:layout_alignBottom="@+id/Button04"
        android:layout_alignLeft="@+id/Button01"
        android:onClick="lowAutoMinus"
        android:text="-" />

    <TextView
        android:id="@+id/lowAutoBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button05"
        android:layout_alignBottom="@+id/Button05"
        android:layout_alignLeft="@+id/highAutoBox"
        android:text="10"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/Button06"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView03"
        android:layout_toRightOf="@+id/lowAutoBox"
        android:onClick="lowAutoPlus"
        android:text="+" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button03"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/Button01"
        android:text="@string/lowteleop"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/Button07"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button03"
        android:layout_below="@+id/TextView05"
        android:onClick="lowTeleMinus"
        android:text="-" />

    <Button
        android:id="@+id/Button08"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView05"
        android:layout_toLeftOf="@+id/Button01"
        android:onClick="lowTelePlus"
        android:text="+" />

    <Button
        android:id="@+id/Button09"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button07"
        android:layout_below="@+id/TextView07"
        android:onClick="catchesMinus"
        android:text="-" />

    <TextView
        android:id="@+id/catchesBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button09"
        android:layout_alignBottom="@+id/Button09"
        android:layout_toRightOf="@+id/Button09"
        android:text="10"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/Button10"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView07"
        android:layout_toRightOf="@+id/catchesBox"
        android:onClick="catchesPlus"
        android:text="+" />

    <TextView
        android:id="@+id/TextView07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/Button07"
        android:layout_marginTop="15dp"
        android:text="@string/catches"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/trussBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button11"
        android:layout_alignBottom="@+id/Button11"
        android:layout_toLeftOf="@+id/Button06"
        android:text="10"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/redFinalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button09"
        android:layout_below="@+id/Button10"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number"
        android:hint="Red Score" />

    <EditText
        android:id="@+id/blueFinalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button05"
        android:layout_below="@+id/Button10"
        android:ems="10"
        android:inputType="number"
        android:hint="Blue Score" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView05"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:text="@string/assists"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lowTeleOpBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button08"
        android:layout_alignBottom="@+id/Button08"
        android:layout_toLeftOf="@+id/Button08"
        android:text="10"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_below="@+id/TextView05"
        android:onClick="toggle"
        android:textOff="@string/notmobile"
        android:textOn="@string/mobile" />

    <Button
        android:id="@+id/Button12"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/blueFinalScore"
        android:layout_toRightOf="@+id/redFinalScore"
        android:onClick="trussesPlus"
        android:text="+" />

    <Button
        android:id="@+id/Button11"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/redFinalScore"
        android:layout_alignLeft="@+id/blueFinalScore"
        android:onClick="trussesMinus"
        android:text="-" />

    <TextView
        android:id="@+id/TextView09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button12"
        android:layout_toLeftOf="@+id/Button12"
        android:text="@string/trusses"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>